--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </li>
             <li>Our Works</li>
           </ul>
-          <button type="button" id="logoutBTN" onclick="logOut()">Contact Us</button>
+          <button type="button" id="contactBtn" onclick="contactUs()">Contact Us</button>
         </div>
       </div>
       <div id="content">
